@@ -1,7 +1,9 @@
 7/8/12
   Changed grid. First column and second window are resizable
   Fixed kill client and quit
-  The order windows are focused in is remembered
+  The order windows are focused in is remembered -
+      makes a difference in stacking mode !
+  Option to output info to stdout for use in bipolarbar etc.
 
 29/6/12
   Don't allow unmanaged windows to be moved
